--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,7 +7,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/silverbullet
+ExecStart=__INSTALL_DIR__/silverbullet --hostname 127.0.0.1 --port __PORT__ --user __ADMIN__:__PASSWORD__
 
 
 # Sandboxing options to harden security
